# python_hw_number_17

./: .gitignore  README.md  pyproject.toml
schemas/: post_unsuccessful.json  put_update_user.json
tests/api/: test_delete_user.py  test_get_list_users.py  test_get_user_not_found.py  test_negative_no_authorization.py  test_post_create_user.py  test_post_login_unsuccessful.py  test_put_update.py
tests/api/schemas/: get_list_users.json  post_create_user.json
